--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -24,6 +24,7 @@ reference:
   - title: Create or manage tables
     contents:
     - create_table
+    - create_index
     - create_logs_if_missing
     - update_snapshot
     - filter_keys
