--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Imports:
     tidyselect,
     utils
 Suggests:
+    bench,
     callr,
     conflicted,
     duckdb,
@@ -46,7 +47,6 @@ Suggests:
     jsonlite,
     knitr,
     lintr,
-    microbenchmark,
     odbc,
     rmarkdown,
     roxygen2,
