Revert "feat(benchmark): Swap to bench::mark() to capture memory also"
This reverts commit 13d1ab793998440a348f49c65391ef62a48a37e2.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,6 @@ Imports:
     tidyselect,
     utils
 Suggests:
-    bench,
     callr,
     conflicted,
     duckdb,
@@ -47,6 +46,7 @@ Suggests:
     jsonlite,
     knitr,
     lintr,
+    microbenchmark,
     odbc,
     rmarkdown,
     roxygen2,
