chore: Restore #131, #137, #138 and #141
This reverts commit bff200785ea0d2b81acfcfca27f8ef4bc9921691.
This reverts commit ce6b09c52ee8c8ba42ec2ecac2ad206be50b9d4c.
This reverts commit ceb86f97b3ac303b53594000d1a2eb7297da3f5b.
This reverts commit bb14cc8731383e33da268b40de756fe31bfd2f66.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,8 @@ License: GPL-3
 Encoding: UTF-8
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE, r6 = TRUE)
+Depends:
+    R (>= 3.5.0)
 Imports:
     checkmate,
     DBI,
@@ -42,10 +44,14 @@ Suggests:
     callr,
     conflicted,
     duckdb,
+    ggplot2,
+    here,
     jsonlite,
     knitr,
     lintr,
+    microbenchmark,
     odbc,
+    pak,
     rmarkdown,
     roxygen2,
     pkgdown,
