--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ S3method(schema_exists,SQLiteConnection)
 S3method(schema_exists,default)
 S3method(table_exists,DBIConnection)
 S3method(tidyr::unite,tbl_dbi)
+export("%>%")
 export(Logger)
 export(LoggerNull)
 export(close_connection)
@@ -84,6 +85,7 @@ export(update_snapshot)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
 importFrom(R6,R6Class)
+importFrom(magrittr,"%>%")
 importFrom(methods,setGeneric)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
