--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Authors@R:
 	           comment = c(ORCID = "0009-0006-8090-406X")),
         person("Lasse Engbo", "Christiansen", , "lsec@ssi.dk", role = c("rev"),
              comment = c(ORCID = "0000-0001-5019-1931")),
+        person("Sofia Myrup", "Otero", , "smot@ssi.dk", role = c("rev")),
 	    person("Statens Serum Institut",
 	           role = c("cph", "fnd")))
 Description: A collection of functions that enable easy access and updating of a database of data over time.
