chore(DESCRIPTION): Update author list

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,17 +3,26 @@ Type: Package
 Title: Easily Access and Maintain Time-Based Versioned Data (Slowly-Changing-Dimension)
 Version: 0.5.0.9000
 Authors@R:
-	  c(person("Rasmus Skytte", "Randl\U00F8v", , "rske@ssi.dk",
-	           role = c("aut", "cre", "rev"),
-	           comment = c(ORCID = "0000-0002-5860-3838")),
-	    person("Marcus Munch", "Gr\U00FCnewald", , ,
-	           role = c("aut"),
-	           comment = c(ORCID = "0009-0006-8090-406X")),
-        person("Lasse Engbo", "Christiansen", , "lsec@ssi.dk", role = c("rev"),
-             comment = c(ORCID = "0000-0001-5019-1931")),
-        person("Sofia Myrup", "Otero", , "smot@ssi.dk", role = c("rev")),
-	    person("Statens Serum Institut",
-	           role = c("cph", "fnd")))
+	  c(person(
+            "Rasmus Skytte", "Randl\U00F8v",
+            email = "rske@ssi.dk",
+            role = c("aut", "cre", "rev"),
+            comment = c(ORCID = "0000-0002-5860-3838")
+        ),
+	    person(
+            "Marcus Munch", "Gr\U00FCnewald",
+            role = "aut",
+            comment = c(ORCID = "0009-0006-8090-406X")
+        ),
+        person(
+            "Lasse Engbo", "Christiansen",
+            email = "lsec@ssi.dk",
+            role = "rev",
+            comment = c(ORCID = "0000-0001-5019-1931")
+        ),
+        person("Sofia Myrup", "Otero", , "smot@ssi.dk", role = "rev"),
+        person("Kim Daniel", "Jacobsen", role = "ctb"),
+	    person("Statens Serum Institut", role = c("cph", "fnd")))
 Description: A collection of functions that enable easy access and updating of a database of data over time.
              More specifically, the package facilitates type-2 history for data-warehouses and provides a number
              of Quality of life improvements for working on SQL databases with R.
