--- a/.github/workflows/all-workflows.yaml
+++ b/.github/workflows/all-workflows.yaml
@@ -29,9 +29,17 @@ jobs:
       outputs:
         abort: ${{ steps.pr_detect.outputs.abort }}
       steps:
-        - name: Run one
-          if: github.event_name == 'push'
+        #if: github.event_name == 'push'
+        - uses: actions/checkout@v3
           id: pr_detect
+
+        - name: Set up R
+          uses: r-lib/actions/setup-r@v2
+
+        - name: Install dependencies
+          uses: r-lib/actions/setup-r-dependencies@v2
+
+        - name: Run single test file
           run: Rscript -e 'testthat::test_file("tests/testthat/test-getTableSignature.R")'
 
   # We call the reusable workflow that triggers all AEF-DDF workflows
