--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(db_timestamp)
 export(defer_db_cleanup)
 export(digest_to_checksum)
 export(filter_keys)
+export(getTableSignature)
 export(get_catalog)
 export(get_connection)
 export(get_schema)
