feat(get_connection): Add JDBCDriver method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ S3method(get_catalog,Id)
 S3method(get_catalog,default)
 S3method(get_catalog,duckdb_connection)
 S3method(get_catalog,tbl_dbi)
+S3method(get_connection,JDBCDriver)
 S3method(get_connection,OdbcDriver)
 S3method(get_connection,PqDriver)
 S3method(get_connection,SQLiteDriver)
