feat(schema_exists): Add Oracle support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ S3method(id,data.frame)
 S3method(id,tbl_dbi)
 S3method(interlace,tbl_sql)
 S3method(schema_exists,DBIConnection)
+S3method(schema_exists,JDBCConnection)
 S3method(schema_exists,SQLiteConnection)
 S3method(schema_exists,default)
 S3method(table_exists,DBIConnection)
