feat(DESCRIPTION): Add rJava to Suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -63,10 +63,11 @@ Suggests:
     microbenchmark,
     odbc,
     pak,
+    pkgdown,
+    rJava,
     RJDBC,
     rmarkdown,
     roxygen2,
-    pkgdown,
     RPostgres,
     RSQLite,
     spelling,
