feat(get_schema): Add Oracle implementation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ S3method(get_connection,duckdb_driver)
 S3method(get_schema,"Microsoft SQL Server")
 S3method(get_schema,"NULL")
 S3method(get_schema,Id)
+S3method(get_schema,JDBCConnection)
 S3method(get_schema,PqConnection)
 S3method(get_schema,SQLiteConnection)
 S3method(get_schema,duckdb_connection)
