feat(get_tables): Add Oracle implementation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ S3method(get_schema,duckdb_connection)
 S3method(get_schema,tbl_dbi)
 S3method(get_tables,"Microsoft SQL Server")
 S3method(get_tables,DBIConnection)
+S3method(get_tables,JDBCConnection)
 S3method(get_tables,OdbcConnection)
 S3method(get_tables,PqConnection)
 S3method(get_tables,SQLiteConnection)
