feat(oracle): Add method for dbGetRowsAffected

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,10 +85,13 @@ export(table_exists)
 export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
+exportMethods(dbGetRowsAffected)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
+importFrom(DBI,dbGetRowsAffected)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
 importFrom(methods,setGeneric)
+importFrom(rJava,.jcall)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
