feat(oracle): Manually quote identifiers in `dbWriteTable`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,9 +86,11 @@ export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
 exportMethods(dbGetRowsAffected)
+exportMethods(dbWriteTable)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
 importFrom(DBI,dbGetRowsAffected)
+importFrom(DBI,dbWriteTable)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
 importFrom(methods,setGeneric)
