feat(oracle): Add method for dbQuoteIdentifiers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,10 +86,12 @@ export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
 exportMethods(dbGetRowsAffected)
+exportMethods(dbQuoteIdentifier)
 exportMethods(dbWriteTable)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
 importFrom(DBI,dbGetRowsAffected)
+importFrom(DBI,dbQuoteIdentifier)
 importFrom(DBI,dbWriteTable)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
