docs: Re-build roxygen documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ importFrom(DBI,dbWriteTable)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
 importFrom(methods,setGeneric)
+importFrom(methods,setMethod)
 importFrom(rJava,.jcall)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
