chore(all-workflows): Disable most workflows while implementing

--- a/.github/workflows/all-workflows.yaml
+++ b/.github/workflows/all-workflows.yaml
@@ -34,6 +34,8 @@ jobs:
       backend_exclude: oracle
 
       # code-coverage creates data bases for the tests. Here you can specify the schemas you need for the workflow
+      backend_exclude: sqlite,duckdb,postgres,mssql
       schemas: test,test.one
       check_postgres_logs: false
+      skip: R-CMD-check,styler,render-readme,pkgdown,update-lockfile,update-cache
     secrets: inherit
