feat(oracle): Remove ambiguity for `dbExistsTable` dispatch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,11 +85,13 @@ export(table_exists)
 export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
+exportMethods(dbExistsTable)
 exportMethods(dbGetRowsAffected)
 exportMethods(dbQuoteIdentifier)
 exportMethods(dbWriteTable)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
+importFrom(DBI,dbExistsTable)
 importFrom(DBI,dbGetRowsAffected)
 importFrom(DBI,dbQuoteIdentifier)
 importFrom(DBI,dbWriteTable)
