--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(db_timestamp,duckdb_connection)
 S3method(digest_to_checksum,"tbl_Microsoft SQL Server")
 S3method(digest_to_checksum,data.frame)
 S3method(digest_to_checksum,default)
+S3method(digest_to_checksum,tbl_JDBCConnection)
 S3method(digest_to_checksum,tbl_PqConnection)
 S3method(digest_to_checksum,tbl_duckdb_connection)
 S3method(dplyr::anti_join,tbl_sql)
