feat(get_connection): Cast JDBCConnection to Oracle

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ export(table_exists)
 export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
+exportClasses(Oracle)
 exportMethods(dbExistsTable)
 exportMethods(dbGetRowsAffected)
 exportMethods(dbQuoteIdentifier)
