fix(get_connection): Import the JDBCConnection class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ exportMethods(dbQuoteIdentifier)
 exportMethods(dbWriteTable)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
+importClassesFrom(RJDBC,JDBCConnection)
 importFrom(DBI,dbExistsTable)
 importFrom(DBI,dbGetRowsAffected)
 importFrom(DBI,dbQuoteIdentifier)
