f feat(get_connection): Cast JDBCConnection to Oracle

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ S3method(db_timestamp,duckdb_connection)
 S3method(digest_to_checksum,"tbl_Microsoft SQL Server")
 S3method(digest_to_checksum,data.frame)
 S3method(digest_to_checksum,default)
-S3method(digest_to_checksum,tbl_JDBCConnection)
+S3method(digest_to_checksum,tbl_Oracle)
 S3method(digest_to_checksum,tbl_PqConnection)
 S3method(digest_to_checksum,tbl_duckdb_connection)
 S3method(dplyr::anti_join,tbl_sql)
@@ -36,15 +36,15 @@ S3method(get_connection,duckdb_driver)
 S3method(get_schema,"Microsoft SQL Server")
 S3method(get_schema,"NULL")
 S3method(get_schema,Id)
-S3method(get_schema,JDBCConnection)
+S3method(get_schema,Oracle)
 S3method(get_schema,PqConnection)
 S3method(get_schema,SQLiteConnection)
 S3method(get_schema,duckdb_connection)
 S3method(get_schema,tbl_dbi)
 S3method(get_tables,"Microsoft SQL Server")
 S3method(get_tables,DBIConnection)
-S3method(get_tables,JDBCConnection)
 S3method(get_tables,OdbcConnection)
+S3method(get_tables,Oracle)
 S3method(get_tables,PqConnection)
 S3method(get_tables,SQLiteConnection)
 S3method(get_tables,duckdb_connection)
@@ -54,7 +54,7 @@ S3method(id,data.frame)
 S3method(id,tbl_dbi)
 S3method(interlace,tbl_sql)
 S3method(schema_exists,DBIConnection)
-S3method(schema_exists,JDBCConnection)
+S3method(schema_exists,Oracle)
 S3method(schema_exists,SQLiteConnection)
 S3method(schema_exists,default)
 S3method(table_exists,DBIConnection)
