debug dbCreateTable - Insert method to catch calls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
 exportClasses(Oracle)
+exportMethods(dbCreateTable)
 exportMethods(dbExistsTable)
 exportMethods(dbGetRowsAffected)
 exportMethods(dbQuoteIdentifier)
@@ -94,6 +95,7 @@ exportMethods(dbWriteTable)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
 importClassesFrom(RJDBC,JDBCConnection)
+importFrom(DBI,dbCreateTable)
 importFrom(DBI,dbExistsTable)
 importFrom(DBI,dbGetRowsAffected)
 importFrom(DBI,dbQuoteIdentifier)
