fix(create_table): Ensure `odbc` method for `DBI::sqlCreateTable` is loaded

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,3 +107,4 @@ importFrom(methods,setMethod)
 importFrom(rJava,.jcall)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importMethodsFrom(odbc,sqlCreateTable)
