--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(db_timestamp,"NULL")
 S3method(db_timestamp,SQLiteConnection)
 S3method(db_timestamp,default)
 S3method(db_timestamp,duckdb_connection)
+S3method(dbplyr::sql_table_analyze,Oracle)
 S3method(digest_to_checksum,"tbl_Microsoft SQL Server")
 S3method(digest_to_checksum,data.frame)
 S3method(digest_to_checksum,default)
@@ -87,7 +88,6 @@ export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
 exportClasses(Oracle)
-exportMethods(dbCreateTable)
 exportMethods(dbExistsTable)
 exportMethods(dbGetRowsAffected)
 exportMethods(dbQuoteIdentifier)
@@ -95,7 +95,6 @@ exportMethods(dbWriteTable)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
 importClassesFrom(RJDBC,JDBCConnection)
-importFrom(DBI,dbCreateTable)
 importFrom(DBI,dbExistsTable)
 importFrom(DBI,dbGetRowsAffected)
 importFrom(DBI,dbQuoteIdentifier)
