fix(getTableSignature): Ensure `odbc` and `RJDBC` methods for `DBI::dbDataType` are loaded

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,4 +106,6 @@ importFrom(methods,setMethod)
 importFrom(rJava,.jcall)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importMethodsFrom(RJDBC,dbDataType)
+importMethodsFrom(odbc,dbDataType)
 importMethodsFrom(odbc,sqlCreateTable)
