debug oracle - import more methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,10 +95,6 @@ exportMethods(dbWriteTable)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
 importClassesFrom(RJDBC,JDBCConnection)
-importFrom(DBI,dbExistsTable)
-importFrom(DBI,dbGetRowsAffected)
-importFrom(DBI,dbQuoteIdentifier)
-importFrom(DBI,dbWriteTable)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
 importFrom(methods,setGeneric)
@@ -106,6 +102,11 @@ importFrom(methods,setMethod)
 importFrom(rJava,.jcall)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importMethodsFrom(DBI,dbExistsTable)
+importMethodsFrom(DBI,dbGetRowsAffected)
+importMethodsFrom(DBI,dbQuoteIdentifier)
 importMethodsFrom(RJDBC,dbDataType)
+importMethodsFrom(RJDBC,dbExistsTable)
+importMethodsFrom(RJDBC,dbWriteTable)
 importMethodsFrom(odbc,dbDataType)
 importMethodsFrom(odbc,sqlCreateTable)
