--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ S3method(dbplyr::sql_table_analyze,Oracle)
 S3method(digest_to_checksum,"tbl_Microsoft SQL Server")
 S3method(digest_to_checksum,data.frame)
 S3method(digest_to_checksum,default)
-S3method(digest_to_checksum,tbl_Oracle)
+S3method(digest_to_checksum,tbl_Oracle_JDBC)
 S3method(digest_to_checksum,tbl_PqConnection)
 S3method(digest_to_checksum,tbl_duckdb_connection)
 S3method(dplyr::anti_join,tbl_sql)
@@ -87,7 +87,7 @@ export(table_exists)
 export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
-exportClasses(Oracle)
+exportClasses(Oracle_JDBC)
 exportMethods(dbExistsTable)
 exportMethods(dbGetRowsAffected)
 exportMethods(dbQuoteIdentifier)
