fix backend_oracle - import odbc Oracle class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ exportMethods(dbWriteTable)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
 importClassesFrom(RJDBC,JDBCConnection)
+importClassesFrom(odbc,Oracle)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
 importFrom(methods,setGeneric)
