--- a/.github/workflows/all-workflows.yaml
+++ b/.github/workflows/all-workflows.yaml
@@ -35,5 +35,5 @@ jobs:
       # code-coverage creates data bases for the tests. Here you can specify the schemas you need for the workflow
       schemas: test,test.one
       check_postgres_logs: false
-      skip: styler,update_cache
+      skip: styler
     secrets: inherit
