--- a/.github/workflows/all-workflows.yaml
+++ b/.github/workflows/all-workflows.yaml
@@ -36,4 +36,5 @@ jobs:
       schemas: test,test.one
       check_postgres_logs: false
       skip: styler
+      use-containers: false
     secrets: inherit
