--- a/.github/workflows/all-workflows.yaml
+++ b/.github/workflows/all-workflows.yaml
@@ -26,7 +26,7 @@ jobs:
     name: ⚙️ Dispatch
     needs: context
     if: needs.context.outputs.abort != 'true' || contains('main,master', github.ref_name)
-    uses: ssi-dk/AEF-DDF/.github/workflows/workflow-dispatcher.yaml@dockerise-workflows
+    uses: ssi-dk/AEF-DDF/.github/workflows/workflow-dispatcher.yaml@main
     with:
       # We pass information about the triggering event
       event_name: ${{ github.event_name }}
