--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ S3method(db_timestamp,"NULL")
 S3method(db_timestamp,SQLiteConnection)
 S3method(db_timestamp,default)
 S3method(db_timestamp,duckdb_connection)
-S3method(dbplyr::sql_table_analyze,Oracle)
 S3method(digest_to_checksum,"tbl_Microsoft SQL Server")
 S3method(digest_to_checksum,data.frame)
 S3method(digest_to_checksum,default)
@@ -88,25 +87,25 @@ export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
 exportMethods(dbExistsTable)
-exportMethods(dbGetRowsAffected)
 exportMethods(dbQuoteIdentifier)
+exportMethods(dbSendQuery)
 exportMethods(dbWriteTable)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
 importClassesFrom(RJDBC,JDBCConnection)
+importClassesFrom(odbc,Oracle)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
 importFrom(methods,setGeneric)
-importFrom(methods,setMethod)
-importFrom(rJava,.jcall)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importMethodsFrom(DBI,dbExistsTable)
-importMethodsFrom(DBI,dbGetRowsAffected)
 importMethodsFrom(DBI,dbQuoteIdentifier)
+importMethodsFrom(DBI,dbSendQuery)
 importMethodsFrom(DBI,dbWriteTable)
 importMethodsFrom(RJDBC,dbDataType)
 importMethodsFrom(RJDBC,dbExistsTable)
+importMethodsFrom(RJDBC,dbSendQuery)
 importMethodsFrom(RJDBC,dbWriteTable)
 importMethodsFrom(odbc,dbDataType)
 importMethodsFrom(odbc,sqlCreateTable)
