--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
 exportMethods(dbExistsTable)
+exportMethods(dbIsValid)
 exportMethods(dbQuoteIdentifier)
 exportMethods(dbSendQuery)
 exportMethods(dbWriteTable)
@@ -100,6 +101,7 @@ importFrom(methods,setGeneric)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importMethodsFrom(DBI,dbExistsTable)
+importMethodsFrom(DBI,dbIsValid)
 importMethodsFrom(DBI,dbQuoteIdentifier)
 importMethodsFrom(DBI,dbSendQuery)
 importMethodsFrom(DBI,dbWriteTable)
