--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ export(table_exists)
 export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
+exportMethods(dbBegin)
 exportMethods(dbExistsTable)
 exportMethods(dbIsValid)
 exportMethods(dbQuoteIdentifier)
@@ -100,6 +101,7 @@ importFrom(magrittr,"%>%")
 importFrom(methods,setGeneric)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importMethodsFrom(DBI,dbBegin)
 importMethodsFrom(DBI,dbExistsTable)
 importMethodsFrom(DBI,dbIsValid)
 importMethodsFrom(DBI,dbQuoteIdentifier)
