--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
 exportMethods(dbBegin)
+exportMethods(dbCommit)
 exportMethods(dbExistsTable)
 exportMethods(dbIsValid)
 exportMethods(dbQuoteIdentifier)
@@ -102,6 +103,7 @@ importFrom(methods,setGeneric)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importMethodsFrom(DBI,dbBegin)
+importMethodsFrom(DBI,dbCommit)
 importMethodsFrom(DBI,dbExistsTable)
 importMethodsFrom(DBI,dbIsValid)
 importMethodsFrom(DBI,dbQuoteIdentifier)
