--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(update_snapshot)
 exportMethods(dbBegin)
 exportMethods(dbCommit)
 exportMethods(dbExistsTable)
+exportMethods(dbGetInfo)
 exportMethods(dbIsValid)
 exportMethods(dbQuoteIdentifier)
 exportMethods(dbSendQuery)
@@ -105,6 +106,7 @@ importFrom(rlang,.data)
 importMethodsFrom(DBI,dbBegin)
 importMethodsFrom(DBI,dbCommit)
 importMethodsFrom(DBI,dbExistsTable)
+importMethodsFrom(DBI,dbGetInfo)
 importMethodsFrom(DBI,dbIsValid)
 importMethodsFrom(DBI,dbQuoteIdentifier)
 importMethodsFrom(DBI,dbSendQuery)
