--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ exportMethods(dbExistsTable)
 exportMethods(dbGetInfo)
 exportMethods(dbIsValid)
 exportMethods(dbQuoteIdentifier)
+exportMethods(dbRollback)
 exportMethods(dbSendQuery)
 exportMethods(dbWriteTable)
 import(parallelly)
@@ -109,6 +110,7 @@ importMethodsFrom(DBI,dbExistsTable)
 importMethodsFrom(DBI,dbGetInfo)
 importMethodsFrom(DBI,dbIsValid)
 importMethodsFrom(DBI,dbQuoteIdentifier)
+importMethodsFrom(DBI,dbRollback)
 importMethodsFrom(DBI,dbSendQuery)
 importMethodsFrom(DBI,dbWriteTable)
 importMethodsFrom(RJDBC,dbDataType)
