--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ exportMethods(dbIsValid)
 exportMethods(dbQuoteIdentifier)
 exportMethods(dbRollback)
 exportMethods(dbSendQuery)
+exportMethods(dbSendStatement)
 exportMethods(dbWriteTable)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
@@ -112,6 +113,7 @@ importMethodsFrom(DBI,dbIsValid)
 importMethodsFrom(DBI,dbQuoteIdentifier)
 importMethodsFrom(DBI,dbRollback)
 importMethodsFrom(DBI,dbSendQuery)
+importMethodsFrom(DBI,dbSendStatement)
 importMethodsFrom(DBI,dbWriteTable)
 importMethodsFrom(RJDBC,dbDataType)
 importMethodsFrom(RJDBC,dbExistsTable)
