Try to implement dbGetRowsAffected

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ exportMethods(dbBegin)
 exportMethods(dbCommit)
 exportMethods(dbExistsTable)
 exportMethods(dbGetInfo)
+exportMethods(dbGetRowsAffected)
 exportMethods(dbIsValid)
 exportMethods(dbQuoteIdentifier)
 exportMethods(dbRollback)
@@ -103,12 +104,14 @@ importClassesFrom(odbc,Oracle)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
 importFrom(methods,setGeneric)
+importFrom(rJava,.jcall)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importMethodsFrom(DBI,dbBegin)
 importMethodsFrom(DBI,dbCommit)
 importMethodsFrom(DBI,dbExistsTable)
 importMethodsFrom(DBI,dbGetInfo)
+importMethodsFrom(DBI,dbGetRowsAffected)
 importMethodsFrom(DBI,dbIsValid)
 importMethodsFrom(DBI,dbQuoteIdentifier)
 importMethodsFrom(DBI,dbRollback)
