--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(close_connection)
 export(create_index)
 export(create_logs_if_missing)
 export(create_table)
+export(db_collect.OracleJdbc)
 export(db_timestamp)
 export(defer_db_cleanup)
 export(digest_to_checksum)
