--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(create_index,SQLiteConnection)
 S3method(db_timestamp,"NULL")
 S3method(db_timestamp,SQLiteConnection)
 S3method(db_timestamp,default)
+S3method(db_timestamp,duckdb_connection)
 S3method(digest_to_checksum,"tbl_Microsoft SQL Server")
 S3method(digest_to_checksum,data.frame)
 S3method(digest_to_checksum,default)
