feat(dbFetch): Add Oracle implementation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,6 +111,7 @@ importFrom(rlang,.data)
 importMethodsFrom(DBI,dbBegin)
 importMethodsFrom(DBI,dbCommit)
 importMethodsFrom(DBI,dbExistsTable)
+importMethodsFrom(DBI,dbFetch)
 importMethodsFrom(DBI,dbGetInfo)
 importMethodsFrom(DBI,dbGetRowsAffected)
 importMethodsFrom(DBI,dbIsValid)
