docs: Re-build roxygen documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ export(update_snapshot)
 exportMethods(dbBegin)
 exportMethods(dbCommit)
 exportMethods(dbExistsTable)
+exportMethods(dbFetch)
 exportMethods(dbGetInfo)
 exportMethods(dbGetRowsAffected)
 exportMethods(dbIsValid)
