docs: Re-build roxygen documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ S3method(get_connection,duckdb_driver)
 S3method(get_schema,"Microsoft SQL Server")
 S3method(get_schema,"NULL")
 S3method(get_schema,Id)
+S3method(get_schema,JDBCConnection)
 S3method(get_schema,Oracle)
 S3method(get_schema,PqConnection)
 S3method(get_schema,SQLiteConnection)
