docs: Re-build roxygen documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,6 +100,7 @@ exportMethods(dbRollback)
 exportMethods(dbSendQuery)
 exportMethods(dbSendStatement)
 exportMethods(dbWriteTable)
+exportMethods(fetch)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
 importClassesFrom(RJDBC,JDBCConnection)
@@ -122,6 +123,7 @@ importMethodsFrom(DBI,dbRollback)
 importMethodsFrom(DBI,dbSendQuery)
 importMethodsFrom(DBI,dbSendStatement)
 importMethodsFrom(DBI,dbWriteTable)
+importMethodsFrom(DBI,fetch)
 importMethodsFrom(RJDBC,dbDataType)
 importMethodsFrom(RJDBC,dbExistsTable)
 importMethodsFrom(RJDBC,dbSendQuery)
