docs: Re-build roxygen documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ exportMethods(fetch)
 import(parallelly)
 importClassesFrom(DBI,DBIConnection)
 importClassesFrom(RJDBC,JDBCConnection)
+importClassesFrom(RJDBC,JDBCResult)
 importClassesFrom(odbc,Oracle)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
